# werwolf

./: .env.example  .gitignore  README.md  pyproject.toml
.playwright-cli/: page-2026-06-26T19-53-12-584Z.yml  page-2026-06-26T19-55-14-063Z.yml  page-2026-06-26T19-55-16-745Z.yml  page-2026-06-26T19-55-42-882Z.yml  page-2026-06-26T20-12-08-226Z.yml  page-2026-06-26T20-12-22-978Z.yml  page-2026-06-26T20-12-43-496Z.yml  page-2026-06-26T20-12-58-094Z.yml
app/: __init__.py  main.py
app/agents/: __init__.py  action_space.py  advisor.py  pipeline.py  prompts.py  quality.py  runtime.py  sample_runner.py
app/api/: routes.py
app/core/: config.py
app/engine/: __init__.py  game.py  models.py
app/static/: app.js  style.css
app/templates/: index.html
tests/: frontend_dom_harness.js  test_rules.py
werwolf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
