[project]
name = "werwolf"
version = "0.1.0"
description = "基于 OpenAI Agents SDK 的 Web 狼人杀游戏"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.2",
  "openai-agents>=0.0.12",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

